# wanying

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  release.yml
src/: App.vue  Fx.vue  Home.vue  List.vue  My.vue  Play.vue  config.js  main.js  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  lib.rs.bak2  main.rs
src/stores/: apiConfig.js  driveConfig.js
src/utils/: ali-drive.js  api.js  cloud-dispatcher.js  mtvod.js  proxy.js  quark-drive.js  uc-drive.js  wogg-spider.js
